--- a/pages/auth.html
+++ b/pages/auth.html
@@ -208,7 +208,7 @@
         // Check if already logged in
         supabaseClient.auth.getSession().then(({ data: { session } }) => {
             if (session) {
-                window.location.href = 'chat.html';
+                window.location.href = '/pages/chat.html';
             }
         });
 
@@ -266,7 +266,7 @@
                 if (error) throw error;
                 
                 showNotification('Welcome back!', 'success');
-                setTimeout(() => window.location.href = 'chat.html', 1000);
+                setTimeout(() => window.location.href = '/pages/chat.html', 1000);
             } catch (error) {
                 console.error('Sign in error:', error);
                 showError(error.message || 'Invalid email or password');
@@ -306,7 +306,7 @@
                 if (error) throw error;
                 
                 showNotification('Account created! Redirecting...', 'success');
-                setTimeout(() => window.location.href = 'chat.html', 1500);
+                setTimeout(() => window.location.href = '/pages/chat.html', 1500);
             } catch (error) {
                 console.error('Sign up error:', error);
                 showError(error.message || 'Failed to create account');
