--- a/pages/settings.html
+++ b/pages/settings.html
@@ -211,7 +211,7 @@
                 <h1 class="settings-title">⚙️ Settings</h1>
                 <p class="text-secondary">Manage your profile and preferences</p>
             </div>
-            <a href="chat.html" class="btn btn-secondary btn-sm">← Back to Chat</a>
+            <a href="/pages/chat.html" class="btn btn-secondary btn-sm">← Back to Chat</a>
         </div>
 
         <!-- Profile Section -->
@@ -287,7 +287,7 @@
         <div class="settings-section" id="adminSection" style="display: none;">
             <div class="section-title">👑 Admin</div>
             <p class="text-secondary mb-3">You have administrator privileges</p>
-            <a href="admin.html" class="btn btn-primary">Open Admin Panel</a>
+            <a href="/pages/admin.html" class="btn btn-primary">Open Admin Panel</a>
         </div>
 
         <!-- Danger Zone -->
@@ -324,7 +324,7 @@
             const { data: { session } } = await supabaseClient.auth.getSession();
             
             if (!session) {
-                window.location.href = 'auth.html';
+                window.location.href = '/pages/auth.html';
                 return;
             }
 
@@ -567,7 +567,7 @@
                 
                 showNotification('Account deleted', 'success');
                 setTimeout(() => {
-                    window.location.href = 'index.html';
+                    window.location.href = '/';
                 }, 2000);
             } catch (error) {
                 console.error('Error deleting account:', error);
