--- a/index.html
+++ b/index.html
@@ -194,5 +194,8 @@
             }
         });
     </script>
+    
+    <!-- Vercel Analytics -->
+    <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
 </body>
 </html>
