--- a/pages/auth.html
+++ b/pages/auth.html
@@ -365,5 +365,8 @@
             }
         });
     </script>
+    
+    <!-- Vercel Analytics -->
+    <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
 </body>
 </html>
