--- a/pages/chat.html
+++ b/pages/chat.html
@@ -1010,5 +1010,8 @@
         // Initialize
         checkAuth();
     </script>
+    
+    <!-- Vercel Analytics -->
+    <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
 </body>
 </html>
