--- a/pages/admin.html
+++ b/pages/admin.html
@@ -678,5 +678,8 @@
         // Initialize
         checkAuth();
     </script>
+    
+    <!-- Vercel Analytics -->
+    <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
 </body>
 </html>
