--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Chat - Secure Messaging</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="stylesheet" href="css/dark-theme.css">
+    <link rel="stylesheet" href="css/theme-system.css">
     <style>
         @keyframes gradientShift {
             0% { background-position: 0% 50%; }
@@ -194,6 +196,9 @@
             }
         });
     </script>
+    
+    <!-- Theme Toggle -->
+    <script src="js/theme-toggle.js"></script>
     
     <!-- Vercel Analytics -->
     <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
