--- a/pages/auth.html
+++ b/pages/auth.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In - Quick Chat</title>
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="stylesheet" href="../css/dark-theme.css">
+    <link rel="stylesheet" href="../css/theme-system.css">
     <style>
         body {
             display: flex;
@@ -365,6 +367,9 @@
             }
         });
     </script>
+    
+    <!-- Theme Toggle -->
+    <script src="../js/theme-toggle.js"></script>
     
     <!-- Vercel Analytics -->
     <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
