--- a/pages/chat.html
+++ b/pages/chat.html
@@ -14,6 +14,20 @@
             position: relative;
         }
 
+        /* Background image support */
+        #chatBgImage {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+            opacity: 0.15;
+            z-index: 0;
+            pointer-events: none;
+        }
+
         body::before {
             content: '';
             position: fixed;
@@ -23,14 +37,14 @@
             bottom: 0;
             background: linear-gradient(135deg, rgba(102, 126, 234, 0.08) 0%, rgba(118, 75, 162, 0.08) 50%, rgba(240, 147, 251, 0.08) 100%);
             pointer-events: none;
-            z-index: 0;
+            z-index: 1;
         }
 
         .chat-container {
             display: flex;
             height: 100vh;
             position: relative;
-            z-index: 1;
+            z-index: 2;
         }
 
         /* Sidebar */
@@ -457,6 +471,7 @@
     </style>
 </head>
 <body>
+    <img id="chatBgImage" style="display: none;" alt="">
     <div class="chat-container">
         <!-- Sidebar -->
         <div class="sidebar">
@@ -598,6 +613,16 @@
 
             name.textContent = currentUser.display_name;
             code.textContent = currentUser.friend_code;
+            
+            // Load background image if set
+            if (currentUser.bg_image_url) {
+                const bgImg = document.getElementById('chatBgImage');
+                bgImg.src = currentUser.bg_image_url;
+                bgImg.style.display = 'block';
+                bgImg.onerror = function() {
+                    this.style.display = 'none';
+                };
+            }
         }
 
         // Update online status
