--- a/pages/settings.html
+++ b/pages/settings.html
@@ -31,10 +31,11 @@
             position: fixed;
             top: 0;
             left: 0;
-            right: 0;
-            bottom: 0;
+            width: 100%;
+            height: 100%;
             object-fit: cover;
-            opacity: 0.15;
+            object-position: center center;
+            opacity: 0.25;
             z-index: 0;
             pointer-events: none;
         }
@@ -53,6 +54,12 @@
             margin-bottom: 32px;
             padding-bottom: 20px;
             border-bottom: 1px solid var(--border-color);
+        }
+
+        .settings-header .header-actions {
+            display: flex;
+            gap: 8px;
+            align-items: center;
         }
 
         .settings-title {
@@ -213,7 +220,9 @@
                 <h1 class="settings-title">⚙️ Settings</h1>
                 <p class="text-secondary">Manage your profile and preferences</p>
             </div>
-            <a href="/pages/chat.html" class="btn btn-secondary btn-sm">← Back to Chat</a>
+            <div class="header-actions">
+                <a href="/pages/chat.html" class="btn btn-secondary btn-sm">← Back to Chat</a>
+            </div>
         </div>
 
         <!-- Profile Section -->
