--- a/pages/chat.html
+++ b/pages/chat.html
@@ -10,7 +10,7 @@
     <style>
         body {
             margin: 0;
-            overflow: hidden;
+            overflow: auto;
             position: relative;
         }
 
@@ -50,18 +50,18 @@
         /* Sidebar */
         .sidebar {
             width: 320px;
-            background: rgba(20, 20, 20, 0.85);
-            backdrop-filter: blur(20px);
+            background: rgba(20, 20, 20, 0.5);
+            backdrop-filter: blur(10px);
             border-right: 1px solid rgba(255, 255, 255, 0.05);
             display: flex;
             flex-direction: column;
-            box-shadow: 2px 0 20px rgba(0, 0, 0, 0.3);
+            box-shadow: 2px 0 20px rgba(0, 0, 0, 0.2);
         }
 
         .sidebar-header {
             padding: 20px;
             border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-            background: linear-gradient(135deg, rgba(102, 126, 234, 0.1), rgba(118, 75, 162, 0.1));
+            background: transparent;
         }
 
         .user-profile {
@@ -170,16 +170,17 @@
             gap: 12px;
             margin-bottom: 4px;
             position: relative;
+            background: transparent;
         }
 
         .friend-item:hover {
-            background: rgba(99, 102, 241, 0.15);
+            background: rgba(99, 102, 241, 0.2);
             transform: translateX(4px);
             box-shadow: 0 4px 12px rgba(99, 102, 241, 0.2);
         }
 
         .friend-item.active {
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.2), rgba(139, 92, 246, 0.2));
+            background: linear-gradient(135deg, rgba(99, 102, 241, 0.3), rgba(139, 92, 246, 0.3));
             box-shadow: 0 4px 16px rgba(99, 102, 241, 0.3);
         }
 
@@ -228,18 +229,18 @@
             flex: 1;
             display: flex;
             flex-direction: column;
-            background: var(--bg-primary);
+            background: transparent;
         }
 
         .chat-header {
             padding: 20px 24px;
-            background: rgba(20, 20, 20, 0.85);
-            backdrop-filter: blur(20px);
+            background: rgba(20, 20, 20, 0.5);
+            backdrop-filter: blur(10px);
             border-bottom: 1px solid rgba(255, 255, 255, 0.05);
             display: flex;
             align-items: center;
             justify-content: space-between;
-            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
         }
 
         .chat-header-info {
@@ -288,19 +289,19 @@
         }
 
         .message-content {
-            background: rgba(30, 30, 30, 0.9);
-            backdrop-filter: blur(10px);
+            background: rgba(30, 30, 30, 0.7);
+            backdrop-filter: blur(8px);
             padding: 12px 16px;
             border-radius: 16px;
             word-wrap: break-word;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-            border: 1px solid rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .message.sent .message-content {
-            background: linear-gradient(135deg, rgba(99, 102, 241, 0.9), rgba(139, 92, 246, 0.9));
-            box-shadow: 0 4px 16px rgba(99, 102, 241, 0.4);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            background: linear-gradient(135deg, rgba(99, 102, 241, 0.8), rgba(139, 92, 246, 0.8));
+            box-shadow: 0 4px 16px rgba(99, 102, 241, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
         .message-text {
@@ -321,10 +322,10 @@
         /* Message Input */
         .message-input-container {
             padding: 20px 24px;
-            background: rgba(20, 20, 20, 0.85);
-            backdrop-filter: blur(20px);
+            background: rgba(20, 20, 20, 0.5);
+            backdrop-filter: blur(10px);
             border-top: 1px solid rgba(255, 255, 255, 0.05);
-            box-shadow: 0 -2px 20px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 -2px 20px rgba(0, 0, 0, 0.1);
         }
 
         .message-input-form {
